--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <title>Dad Jokes</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h3>Don't Laugh Challenge</h3>
+        <div id="joke" class="joke">
+           <!-- Joke goes here  -->
+           
+        </div>
+
+        <!-- Button for joke -->
+        <button id="jokeBtn" class="btn"></button>
+    </div>
     <script src="/script.js"></script>
 </body>
 </html>
