--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Dad Jokes</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <h3>Don't Laugh Challenge</h3>
         <div id="joke" class="joke">
            <!-- Joke goes here  -->
-           
+
         </div>
 
         <!-- Button for joke -->
