--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h3>Don't Laugh Challenge</h3>
         <div id="joke" class="joke">
-           <!-- Joke goes here  -->
+           -- Joke goes here --
 
         </div>
 
