--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <!-- Button for joke -->
-        <button id="jokeBtn" class="btn"></button>
+        <button id="jokeBtn" class="btn">Get another joke</button>
     </div>
     <script src="/script.js"></script>
 </body>
