--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <!-- Button for joke -->
         <button id="jokeBtn" class="btn">Get another joke</button>
     </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
